# Python_Deep_Dive

./: README.md  beforePush.txt  learnign.txt  tst.py
Python_00/ex1/: ft_plot_area.py
Python_02/ex0/: ft_first_exception.py
Python_05/ex1/: data_stream.py
Python_05/ex2/: nexus_pipeline.py
Python_06/: Learn_bout_Import_in_python.py  Learning.txt  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py  to_learn.txt  tst.py
Python_06/alchemy/: __init__.py  potions.py
Python_06/alchemy/grimoire/: spellbook.py  validator.py
Python_06/ex0/alchemy/: ft_sacred_scroll.py
Python_07/: Practice.py
Python_07/P7/: compaire.txt  tst.py
Python_07/P7/ex0/: Card.py  CreatureCard.py  main.py
Python_07/P7/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
Python_07/P7/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
Python_07/P7/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  Idea.txt  main.py
Python_07/P7/ex4/: Rankable.py  TournamentCard.py  TournamentPlatform.py  main.py
Python_07/P7/tools/: card_generator.py
Python_08/: before_push.txt  tst.py
Python_08/env/: loading copy.py  tst copy.py
Python_08/ex0/: construct.py  learn.txt  requirements.txt
Python_08/ex1/: learn.txt  loading.py
Python_08/ex2/: oracle.py
Python_08/youness/: loading.py  pyproject.toml
